--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,7 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link href="http://fonts.cdnfonts.com/css/orator-std" rel="stylesheet">
-     <style>
-                            @import url('http://fonts.cdnfonts.com/css/orator-std');
-</style>
+     <style> @import url('http://fonts.cdnfonts.com/css/orator-std')</style>
                            
     <!--
       manifest.json provides metadata used when your web app is installed on a
