--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,10 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link href="http://fonts.cdnfonts.com/css/orator-std" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,800&display=swap" rel="stylesheet"></link>
+
      <style> @import url('http://fonts.cdnfonts.com/css/orator-std')</style>
                            
     <!--
