--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="assets/images/poop.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta content="width=device-width, initial-scale=1" name="viewport" /> 
+       <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Shitcoins.cheap"
