--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,8 @@
     <link href="http://fonts.cdnfonts.com/css/orator-std" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,800&display=swap" rel="stylesheet"></link>
-     <style> @import url('http://fonts.cdnfonts.com/css/orator-std')</style>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@800&display=swap" rel="stylesheet"> 
+    <style> @import url('http://fonts.cdnfonts.com/css/orator-std')</style>
                            
     <!--
       manifest.json provides metadata used when your web app is installed on a
